--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ myst-parser==4.0.*
 sphinx==8.1.3
 sphinx-rtd-theme==3.0.*
 sphinx_mdinclude==0.6.*
+sphinxcontrib-mermaid==1.*
 readthedocs-sphinx-search==0.3.*
