--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ graphviz==0.20.*
 myst-parser==4.0.*
 sphinx==8.1.3
 sphinx-rtd-theme==3.0.*
+sphinx-autobuild==2024.10.*
 sphinx_mdinclude==0.6.*
 sphinxcontrib-mermaid==1.*
 readthedocs-sphinx-search==0.3.*
